# adventofcode-2021

./: LICENSE  README.md  pyproject.toml  pytest.ini
.github/workflows/: pytest.yml
solutions/day1/: day1part1.py  day1part2.py  part1.py  part2.py
solutions/day2/: day2part1.py  day2part2.py
solutions/day3/: day3part1.py
