[tool.poetry]
name = "adventofcode-2021"
version = "0.1.0"
description = ""
authors = ["Pachwenko <32424503+Pachwenko@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
flake8 = "^4.0.1"
more-itertools = "^8.12.0"
matplotlib = "^3.5.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
